--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,8 +20,8 @@
 			<fieldset>
 				<legend>Name of the dish</legend>
 				<p class="subtext">Optional: Autodetect the name of your dish</p>
-				<input type="text" id="dishName" name="dishName" required />
-				<button id="autodetectFoodButton" class="hidden">Autodetect Dish</button>
+				<input type="text" id="mood__name" name="mood__name" />
+				<button id="camera" class="hidden">Start camera</button>
 				<!-- this is NOT inline styling, determines the size of the screenshot-->
 				<video id="video" width="320" height="240" class="hidden" autoplay></video>
 				<canvas id="canvas" width="320" height="240" class="hidden"></canvas>
