--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,19 +15,7 @@
 			<button>Send</button>
 		</form>
 
-		<form action="" id="avatar">
-			<!-- own character -->
-			<fieldset>
-				<legend>Name of the dish</legend>
-				<p class="subtext">Optional: Autodetect the name of your dish</p>
-				<input type="text" id="mood__name" name="mood__name" />
-				<button id="camera" class="hidden">Start camera</button>
-				<!-- this is NOT inline styling, determines the size of the screenshot-->
-				<video id="video" width="320" height="240" class="hidden" autoplay></video>
-				<canvas id="canvas" width="320" height="240" class="hidden"></canvas>
-			</fieldset>
-		</form>
-
+		<canvas id="canvas" width="200" height="200"></canvas>
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="./scripts/main.js"></script>
 	</body>
