--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,10 @@
 			<button>Send</button>
 		</form>
 
-		<canvas id="canvas" width="200" height="200"></canvas>
+		<div id="draw__emoji">
+			<canvas id="canvas" width="200" height="200"></canvas>
+		</div>
+
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="./scripts/main.js"></script>
 	</body>
