--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,9 @@
 		</form>
 
 		<div id="draw__emoji">
+			<button></button>
 			<canvas id="canvas" width="200" height="200"></canvas>
+			<button>✔</button>
 		</div>
 
 		<script src="/socket.io/socket.io.js"></script>
