added: radio buttons with canvas eyes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,6 +21,12 @@
 			<button>✔</button>
 		</div>
 
+		<div class="eyesButtons">
+			<input type="radio" id="dot__eyes__button" class="eyes"></input>
+			<input type="radio" id="stripe__eyes__button" class="eyes"></input>
+			<input type="radio" id="horizontal__eyes__button" class="eyes"></input>
+		</div>
+
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="./scripts/main.js"></script>
 	</body>
