--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,23 +8,30 @@
 		<link rel="stylesheet" href="./styles/style.css" />
 	</head>
 	<body>
+		<main>
+			<ul id="messages"></ul>
+			<div class="chatbar">
+				<form id="form" action="">
+					<input id="input" autocomplete="off" />
+					<button>Send</button>
+				</form>
+				<button class="emoji__icon">
+					<img src="/icons/smiley.svg" alt="create your own emoji icon" />
+				</button>
+			</div>
+		</main>
 		<!-- chat -->
-		<ul id="messages"></ul>
-		<form id="form" action="">
-			<input id="input" autocomplete="off" />
-			<button>Send</button>
-		</form>
 
 		<div id="draw__emoji">
-			<button></button>
+			<button id="cancel__emoji">❌</button>
 			<canvas id="canvas" width="200" height="200"></canvas>
-			<button>✔</button>
+			<button id="send__emoji">✅</button>
 		</div>
 
 		<div class="eyesButtons">
-			<input type="radio" id="dot__eyes__button" class="eyes"></input>
-			<input type="radio" id="stripe__eyes__button" class="eyes"></input>
-			<input type="radio" id="horizontal__eyes__button" class="eyes"></input>
+			<input type="radio" id="dot__eyes__button" class="eyes" name="eyes" />
+			<input type="radio" id="stripe__eyes__button" class="eyes" name="eyes" />
+			<input type="radio" id="horizontal__eyes__button" class="eyes" name="eyes" />
 		</div>
 
 		<script src="/socket.io/socket.io.js"></script>
