renamed emoji btn

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
 					<input id="input" autocomplete="off" />
 					<button>Send</button>
 				</form>
-				<button class="emoji__icon">
+				<button class="emoji__send__button">
 					<img src="/icons/smiley.svg" alt="create your own emoji icon" />
 				</button>
 			</div>
