removed all styling

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,1 +1,1 @@
-*{box-sizing:border-box;padding:0;margin:0}#draw__emoji{background-color:red;width:-moz-fit-content;width:fit-content;box-shadow:0px 0px 10px rgba(0,0,0,.369);border-radius:1em;z-index:1;padding:1em}.chatbar{display:flex}.eyes{width:3em;height:3em}.chatbar{display:flex;width:100%;gap:.5vw}.chatbar form{display:flex;gap:.5vw}.chatbar .emoji__send__button{width:4em;height:4em}.chatbar .emoji__send__button img{width:3em}/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=style.css.map */
