--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,1 +1,1 @@
-/*# sourceMappingURL=style.css.map */
+*{margin:0;padding:0;box-sizing:border-box}main{display:flex;align-items:flex-end;height:100vh;padding:1em;position:relative}main #messages{position:absolute;bottom:6em}main .chatbar{display:flex;background-color:red;gap:5px;width:100%}main .chatbar form{display:flex;gap:5px;flex-grow:1}main .chatbar form button{height:4em}main .chatbar form input{flex-grow:1;height:4em;width:100%}main .chatbar img{height:3em}/*# sourceMappingURL=style.css.map */
