--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -14,7 +14,9 @@ main {
 
 	#messages {
 		position: absolute;
-		bottom: 6em;
+		bottom: 4em;
+		padding: 1em 0;
+		list-style: none;
 	}
 
 	.chatbar {
