--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,8 +15,11 @@
 					<input id="input" autocomplete="off" />
 					<button>Send</button>
 				</form>
+				<button id="emojis">
+					<img src="/icons/emojis.svg" alt="all emojis icon" />
+				</button>
 				<button id="create__emoji">
-					<img src="/icons/smiley.svg" alt="create your own emoji icon" />
+					<img src="/icons/diyemoji.svg" alt="create your own emoji icon" />
 				</button>
 			</div>
 		</main>
@@ -27,7 +30,7 @@
 			<canvas id="canvas" width="200" height="200"></canvas>
 			<button id="send__emoji">✅</button>
 
-			<div class="eyesButtons">
+			<div>
 				<input type="radio" id="dot__eyes__button" class="eyes" name="eyes" />
 				<input type="radio" id="stripe__eyes__button" class="eyes" name="eyes" />
 				<input type="radio" id="horizontal__eyes__button" class="eyes" name="eyes" />
