changed eyes ids to classses

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,9 +31,15 @@
 			<button id="send__emoji">✅</button>
 
 			<div>
-				<input type="radio" id="dot__eyes__button" class="eyes" name="eyes" />
-				<input type="radio" id="stripe__eyes__button" class="eyes" name="eyes" />
-				<input type="radio" id="horizontal__eyes__button" class="eyes" name="eyes" />
+				<input type="radio" class="dot_eyes" name="eyes" value="round_eyes" tabindex="0" />
+				<input type="radio" class="stripe_eyes" name="eyes" value="stripe_eyes" tabindex="0" />
+				<input
+					type="radio"
+					class="horizontal_eyes"
+					name="eyes"
+					value="horizontal_eyes"
+					tabindex="0"
+				/>
 			</div>
 		</dialog>
 
