--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -17,6 +17,10 @@ main {
     bottom: 4em;
     padding: 1em 0;
     list-style: none;
+
+    img {
+      display: block;
+    }
   }
 
   .chatbar {
