--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,63 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chatroom</title>
-    <link rel="stylesheet" href="./styles/style.css" />
+    <%- include('partials/head') %>
   </head>
   <body>
-    <main>
-      <ul id="messages"></ul>
-      <div class="chatbar">
-        <form id="form" action="">
-          <input id="input" autocomplete="off" />
-          <button>Send</button>
-        </form>
-        <button id="emojis">
-          <img src="/icons/emojis.svg" alt="all emojis icon" />
-        </button>
-        <button id="create__emoji">
-          <img src="/icons/diyemoji.svg" alt="create your own emoji icon" />
-        </button>
-      </div>
-    </main>
-    <!-- chat -->
+    <form action="/chat">
+      <input type="text" />
+      <button type="submit">Start</button>
+    </form>
 
-    <dialog>
-      <button id="cancel__emoji">❌</button>
-      <canvas id="canvas" width="200" height="200"></canvas>
-      <form id="emoji" action="">
-        <button id="send__emoji">✅</button>
-      </form>
-
-      <div>
-        <input
-          type="radio"
-          class="dot_eyes"
-          name="eyes"
-          value="round_eyes"
-          tabindex="0"
-        />
-        <input
-          type="radio"
-          class="stripe_eyes"
-          name="eyes"
-          value="stripe_eyes"
-          tabindex="0"
-        />
-        <input
-          type="radio"
-          class="horizontal_eyes"
-          name="eyes"
-          value="horizontal_eyes"
-          tabindex="0"
-        />
-      </div>
-    </dialog>
-
+    <script src="./scripts/login.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="./scripts/main.js"></script>
   </body>
 </html>
