--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -5,6 +5,7 @@
   </head>
   <body>
     <main>
+      <h1>Welkom <%= username %></h1>
       <ul id="messages"></ul>
       <div class="chatbar">
         <form id="form" action="">
