--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -1,62 +1,63 @@
 * {
-  margin: 0;
   padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
-main {
-  display: flex;
-  // justify-content: center;
-  align-items: flex-end;
-  height: 100vh;
-  padding: 1em;
-  position: relative;
-
-  #messages {
-    position: absolute;
-    bottom: 4em;
-    padding: 1em 0;
-    list-style: none;
-
-    img {
-      display: block;
-    }
-  }
-
-  h1 {
-    position: absolute;
-    top: 0;
-    margin: 1em 0;
-  }
-
-  .chatbar {
-    display: flex;
-    background-color: red;
-    gap: 5px;
-    width: 100%;
-
-    form {
-      display: flex;
-      gap: 5px;
-      flex-grow: 1;
-
-      button {
-        height: 4em;
-      }
-
-      input {
-        flex-grow: 1;
-        height: 4em;
-        width: 100%;
-      }
-    }
-
-    img {
-      height: 3em;
-    }
-  }
+body {
+  font-family: 'Lato', sans-serif;
+  background-color: #2a2a31;
+  color: white;
 }
 
 button {
   cursor: pointer;
+
+  &:hover {
+    filter: brightness(90%) saturate(3);
+  }
+}
+
+#overview__page {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  overflow: hidden;
+  gap: 2em;
+
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+
+    input {
+      padding: 0.7em;
+      text-align: center;
+      border-radius: 2em;
+      border: none;
+      font-weight: bold;
+      font-size: 1em;
+      border: 3px solid transparent;
+
+      &:focus {
+        border: 3px solid #7a7aff;
+        outline: none;
+        border-radius: 2em;
+      }
+    }
+
+    button {
+      background-color: #7a7aff;
+      color: white;
+      border: none;
+      font-size: 1em;
+      font-weight: bolder;
+      border-radius: 0.4em;
+      height: 2.5em;
+      width: 12em;
+      margin: 0 auto;
+    }
+  }
 }
