--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -4,8 +4,8 @@
     <%- include('partials/head') %>
   </head>
   <body>
-    <main>
-      <h1>Welkom <%= username %></h1>
+    <main id="chat__page">
+      <!-- chat -->
       <ul id="messages"></ul>
       <div class="chatbar">
         <form id="form" action="">
@@ -20,7 +20,6 @@
         </button>
       </div>
     </main>
-    <!-- chat -->
 
     <dialog>
       <button id="cancel__emoji">❌</button>
@@ -29,6 +28,7 @@
         <button id="send__emoji">✅</button>
       </form>
 
+      <!-- diy emoji -->
       <div>
         <input
           type="radio"
