--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -10,14 +10,18 @@
       <div class="chatbar">
         <form id="form" action="">
           <input id="input" autocomplete="off" />
-          <button>Send</button>
+          <div class="buttons">
+            <button id="emojis">
+              <img src="/icons/emojis.svg" alt="all emojis icon" />
+            </button>
+            <button id="create__emoji">
+              <img src="/icons/diyemoji.svg" alt="create your own emoji icon" />
+            </button>
+            <button id="send__message">
+              <img src="/icons/send.svg" alt="send" />
+            </button>
+          </div>
         </form>
-        <button id="emojis">
-          <img src="/icons/emojis.svg" alt="all emojis icon" />
-        </button>
-        <button id="create__emoji">
-          <img src="/icons/diyemoji.svg" alt="create your own emoji icon" />
-        </button>
       </div>
     </main>
 
