--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -37,27 +37,38 @@
 
       <!-- diy emoji -->
       <div>
-        <input
-          type="radio"
-          class="dot_eyes"
-          name="eyes"
-          value="round_eyes"
-          tabindex="0"
-        />
-        <input
-          type="radio"
-          class="stripe_eyes"
-          name="eyes"
-          value="stripe_eyes"
-          tabindex="0"
-        />
-        <input
-          type="radio"
-          class="horizontal_eyes"
-          name="eyes"
-          value="horizontal_eyes"
-          tabindex="0"
-        />
+        <label for="">
+          <input
+            type="radio"
+            class="dot_eyes"
+            name="eyes"
+            value="round_eyes"
+            tabindex="0"
+          />
+          <span><img src="/icons/circle.svg" alt="circle eyes" /></span>
+        </label>
+
+        <label for="">
+          <input
+            type="radio"
+            class="stripe_eyes"
+            name="eyes"
+            value="stripe_eyes"
+            tabindex="0"
+          />
+          <span><img src="/icons/stripe.svg" alt="vertical eyes" /></span>
+        </label>
+
+        <label for="">
+          <input
+            type="radio"
+            class="horizontal_eyes"
+            name="eyes"
+            value="horizontal_eyes"
+            tabindex="0"
+          />
+          <span><img src="/icons/horizontal.svg" alt="horizontal eyes" /></span>
+        </label>
       </div>
     </dialog>
 
