changed canvas emoji color and dialog

--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -163,7 +163,7 @@ dialog {
     gap: 0.5em;
 
     input[type='radio'] {
-      appearance: none;
+      // appearance: none;
       // position: absolute;
     }
 
