--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -30,10 +30,14 @@
 
     <div>
       <dialog>
-        <button id="cancel__emoji">❌</button>
+        <button id="cancel__emoji">
+          <img src="/icons/exit.svg" alt="exit diy emoji" />
+        </button>
         <canvas id="canvas" width="200" height="200"></canvas>
         <form id="emoji" action="">
-          <button id="send__emoji">✅</button>
+          <button id="send__emoji">
+            <img src="/icons/send.svg" alt="send diy emoji" />
+          </button>
         </form>
 
         <!-- diy emoji -->
