added floating menu button and styling

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -18,6 +18,7 @@
       </div>
 
       <div class="chatbar">
+        <button id="menu"><img src="/icons/menu.svg" alt="" /></button>
         <form id="form" action="">
           <input id="input" autocomplete="off" />
 
