--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -22,7 +22,7 @@ button {
   cursor: pointer;
 
   &:hover {
-    filter: brightness(80%);
+    filter: brightness(70%);
   }
 }
 
@@ -77,7 +77,7 @@ button {
   display: flex;
   justify-content: flex-end;
   align-items: flex-start;
-  padding: 2em;
+  padding: 1em;
   flex-direction: column;
   width: 100vw;
   overflow: hidden;
@@ -117,6 +117,15 @@ button {
     display: flex;
     width: 100%;
     z-index: 1;
+
+    #menu {
+      background: none;
+      border: none;
+      margin-right: 1em;
+      img {
+        width: 3em;
+      }
+    }
 
     form {
       display: flex;
