--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -9,16 +9,15 @@
       <ul id="messages"></ul>
 
       <div id="buttons">
-        <button id="emojis">
-          <img src="/icons/emojis.svg" alt="all emojis icon" />
-        </button>
-        <button id="create__emoji">
-          <img src="/icons/diyemoji.svg" alt="create your own emoji icon" />
+        <button id="create__emoji" class="hidden">
+          <img src="/icons/create.svg" alt="create your own emoji icon" />
         </button>
       </div>
 
       <div class="chatbar">
-        <button id="menu"><img src="/icons/menu.svg" alt="" /></button>
+        <button id="menu__button">
+          <img id="menu__button__image" src="/icons/menu.svg" alt="" />
+        </button>
         <form id="form" action="">
           <input id="input" autocomplete="off" />
 
