--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -30,6 +30,8 @@
 
     <div>
       <dialog>
+        <p id="dialog__text">Teken de mond met je touchscreen</p>
+
         <button id="cancel__emoji">
           <img src="/icons/exit.svg" alt="exit diy emoji" />
         </button>
