added nonsense and finished product for now

--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -16,6 +16,7 @@ body {
   font-family: 'Lato', sans-serif;
   background-color: #2a2a31;
   color: white;
+  transition: transform 2s ease-in-out;
 }
 
 button {
@@ -84,7 +85,7 @@ button {
 
   #messages {
     width: 100%;
-    padding: 1em 1em 8em 1em !important;
+    padding: 1em 1em 6em 4em !important;
     gap: 0.2em;
     z-index: 0;
     list-style: none;
@@ -214,7 +215,7 @@ dialog {
 
     input[type='radio'] + span {
       display: block;
-      background: white;
+      background-color: white;
       border-radius: 0.1em;
 
       transition: 0.1s ease-in-out;
@@ -228,7 +229,6 @@ dialog {
 
     img {
       width: 3em;
-      filter: brightness(0);
     }
 
     label[for='dot_eyes'] span {
@@ -279,4 +279,12 @@ dialog {
 
 .hidden {
   display: none;
+}
+
+.checked {
+  background-color: red;
+}
+
+.rotate-body {
+  transform: rotate(360deg);
 }
