--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -9,6 +9,10 @@
       <ul id="messages"></ul>
 
       <div id="buttons">
+        <button id="fun__button" class="hidden">
+          <img src="/icons/turn.svg" alt="turn screen for fun" />
+        </button>
+
         <button id="create__emoji" class="hidden">
           <img src="/icons/create.svg" alt="create your own emoji icon" />
         </button>
