--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -34,7 +34,14 @@
 
     <div>
       <dialog>
-        <p id="dialog__text">Teken de mond met je touchscreen</p>
+        <p id="mobile__text">
+          Teken de mond met behulp van je vinger op je touchscreen
+        </p>
+
+        <p id="desktop__text">
+          Teken de mond door 1x te klikken, de lijn te trekken en weer te
+          klikken
+        </p>
 
         <button id="cancel__emoji">
           <img src="/icons/exit.svg" alt="exit diy emoji" />
