final touches for styling

--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -12,11 +12,16 @@
   filter: invert(100%);
 }
 
+html {
+  height: 100%;
+}
+
 body {
   font-family: 'Lato', sans-serif;
   background-color: #2a2a31;
   color: white;
   transition: transform 2s ease-in-out;
+  height: 100%;
 }
 
 button {
@@ -32,7 +37,7 @@ button {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  height: 80vh;
+  height: 100%;
   overflow: hidden;
   gap: 2em;
 
@@ -72,9 +77,9 @@ button {
 }
 
 #chat__page {
-  position: absolute;
+  position: fixed;
   right: 0;
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: flex-end;
   align-items: flex-start;
