--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -188,8 +188,10 @@ dialog {
   border-radius: 0.5em;
   padding: 4em;
   position: fixed;
-  top: 60%;
-  left: 14%;
+  // top: 60%;
+  // left: 14%;
+  left: 50%;
+  top: 50%;
   transform: translate(-50%, -50%);
 
   #mobile__text,
@@ -311,75 +313,75 @@ dialog {
   }
 }
 
-@media (max-width: 1800px) {
-  dialog {
-    left: 15%;
-  }
-}
+// @media (max-width: 1800px) {
+//   dialog {
+//     left: 15%;
+//   }
+// }
 
-@media (max-width: 1700px) {
-  dialog {
-    left: 16%;
-  }
-}
+// @media (max-width: 1700px) {
+//   dialog {
+//     left: 16%;
+//   }
+// }
 
-@media (max-width: 1600px) {
-  dialog {
-    left: 17%;
-  }
-}
+// @media (max-width: 1600px) {
+//   dialog {
+//     left: 17%;
+//   }
+// }
 
-@media (max-width: 1500px) {
-  dialog {
-    left: 18%;
-  }
-}
+// @media (max-width: 1500px) {
+//   dialog {
+//     left: 18%;
+//   }
+// }
 
-@media (max-width: 1400px) {
-  dialog {
-    left: 19%;
-  }
-}
+// @media (max-width: 1400px) {
+//   dialog {
+//     left: 19%;
+//   }
+// }
 
-@media (max-width: 1300px) {
-  dialog {
-    left: 20%;
-  }
-}
+// @media (max-width: 1300px) {
+//   dialog {
+//     left: 20%;
+//   }
+// }
 
-@media (max-width: 1219px) {
-  dialog {
-    left: 21%;
-  }
-}
+// @media (max-width: 1219px) {
+//   dialog {
+//     left: 21%;
+//   }
+// }
 
-@media (max-width: 1209px) {
-  dialog {
-    left: 22%;
-  }
-}
+// @media (max-width: 1209px) {
+//   dialog {
+//     left: 22%;
+//   }
+// }
 
-@media (max-width: 1100px) {
-  dialog {
-    left: 25%;
-  }
-}
+// @media (max-width: 1100px) {
+//   dialog {
+//     left: 25%;
+//   }
+// }
 
-@media (max-width: 1000px) {
-  dialog {
-    left: 50%;
-  }
-}
+// @media (max-width: 1000px) {
+//   dialog {
+//     left: 50%;
+//   }
+// }
 
-@media (max-width: 900px) {
-  dialog {
-    left: 50%;
-  }
-}
+// @media (max-width: 900px) {
+//   dialog {
+//     left: 50%;
+//   }
+// }
 
-@media (max-width: 800px) {
-  dialog {
-    left: 50%;
-    top: 50%;
-  }
-}
+// @media (max-width: 800px) {
+//   dialog {
+//     left: 50%;
+//     top: 50%;
+//   }
+// }
