--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
   </head>
   <body>
     <main id="overview__page">
-      <h1>Eric's Chat</h1>
+      <h1>Drawmotion | Eric's Chat</h1>
       <form id="login__form">
         <input type="text" id="username__input" />
         <button type="submit">Start</button>
