--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,8 +4,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link
-  href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap"
+  href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Lato:wght@400;700;900&display=swap"
   rel="stylesheet"
 />
-<title>Chatroom</title>
+<link rel="icon" type="image/x-icon" href="/public/icons/favicon.svg" />
+<title>Drawmotion | Eric's Chat</title>
 <link rel="stylesheet" href="./styles/style.css" />
