--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     <main id="overview__page">
       <h1><span>Drawmotion</span> Eric's Chat</h1>
       <form id="login__form">
-        <input type="text" id="username__input" />
+        <input type="text" id="username__input" placeholder="Naam" />
         <button type="submit">Start</button>
       </form>
     </main>
